project(cpp_prog_interview_challenges)

# Flags Variables
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")

# Executable Target(s)
add_executable(char_frequencies char_frequencies.cpp)
add_executable(distribute_candies distribute_candies.cpp)
add_executable(fibonacci_recursive_memoization fibonacci_recursive_memoization.cpp)
add_executable(fibonacci_recursive_naive fibonacci_recursive_naive.cpp)
add_executable(flatten_vectors flatten_vectors.cpp)
add_executable(hackerrank_candies hackerrank_candies.cpp)
add_executable(hackerrank_hourglass_sum2 hackerrank_hourglass_sum2.cpp)
add_executable(hackerrank_hourglass_sum hackerrank_hourglass_sum.cpp)
add_executable(hackerrank_rotate_left hackerrank_rotate_left.cpp)
add_executable(longest_repeating_chars_sequence longest_repeating_chars_sequence.cpp)
add_executable(recurring_chars recurring_chars.cpp)
add_executable(fibonacci_sum_even_numbers fibonacci_sum_even_numbers.cpp)
add_executable(prefix_sum prefix_sum.cpp)
add_executable(distribute_N_candies_K_children distribute_N_candies_K_children.cpp)
add_executable(reverse_words_in_string reverse_words_in_string.cpp)
add_executable(overlapping_rectangles overlapping_rectangles.cpp)
add_executable(simple_graph_test simple_graph.cpp simple_graph_test.cpp)
add_executable(simple_graph_bfs_print simple_graph.cpp simple_graph_bfs_print.cpp)
add_executable(simple_graph_bfs_print2 simple_graph.cpp simple_graph_bfs_print2.cpp)
add_executable(simple_graph_dfs_print simple_graph.cpp simple_graph_dfs_print.cpp)
add_executable(find_index_of_largest_element find_index_of_largest_element.cpp)
add_executable(linkedlist_insert_test linkedlist_insert_test.cpp linked_list.cpp)
add_executable(linkedlist_remove_test linkedlist_remove_test.cpp linked_list.cpp)
